# DL_Template

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml
configs/: config.yaml
configs/data/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
scripts/: data_download.py  test.py  train.py
src/DL_Template/: utils.py
src/DL_Template/data/: datamodule.py  dataset.py
src/DL_Template/models/: model.py
src/DL_Template/training/: trainer.py
tests/: test_model.py
