[project]
name = "dl-template"
version = "0.1.0"
description = "Deep learning project template (PyTorch + Hydra + uv)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tensorboard>=2.16",
    "torchmetrics>=1.4",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

# PyTorch CUDA 13.0 wheels (cp314 wheels are published here, not on PyPI).
# uv resolves torch from this index instead of the CPU-only PyPI build.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/DL_Template"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
